@@ -1,3 +1,9 @@
+2011-06-02  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.8.4.2 Released.
+
+	* AST-2011-007
+
 2011-05-20  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.8.4.1 Released.
